welcome.lessons.welcome.methods.picture.PictureMono3.scala.error
PictureMono3:55: error: Unmatched closing brace '}' ignored here
} 
^PictureMono3:57: error: eof expected but '}' found.
}
^